[skip ci] translated Useful notes about Yum

--- a/src/_posts/Linux_server/2015-07-17-yum-notes.md
+++ b/src/_posts/Linux_server/2015-07-17-yum-notes.md
@@ -1,6 +1,6 @@
 ---
 id: 2695
-title: Шпаргалка по Yum
+title: Useful notes about Yum
 date: 2015-07-17T13:59:52+00:00
 author: admin
 
@@ -11,287 +11,236 @@ categories:
   - Linux server
 tags:
   - CentOS
-  - FromHabrSandbox
   - yum
 ---
-Шпаргалка по работе с пакетным менеджером Yum (Yellowdog Updater, Modified), который используется в популярных Linux дистрибутивах: RedHat, CentOS, Scientific Linux (и других). В целях экономии места вывод команд не представлен.  
-<!--more-->
+A cheat sheet for working with the Yum (Yellowdog Updater, Modified) package manager which is used in popular Linux distributions: RedHat, CentOS, Scientific Linux (and others). To save space, command output is not shown.
 
-## Оглавление
+## Table of contents
 
-[Команды](#yumcommands)  
-[Опции Yum](#options)  
-[Пакет Yum-Utils](#yum-utils)  
-[Конфигурационные файлы](#conf)  
-[Плагины](#plugins)  
-[Работа через прокси](#proxy)
+[Commands](#yumcommands)
+[Yum Options](#options)
+[Yum-utils package](#yum-utils)
+[Config files](#conf)
+[Plugins](#plugins)
+[Working through a proxy](#proxy)
 
 <a name="yumcommands"></a>
 
-отображение команд и опций
-
+display of commands and options
 ```bash
 yum help
 ```
 
-список названий пакетов из репозиторий
-
+list of package names from the repository
 ```bash
 yum list
 ```
 
-список всех доступных пакетов
-
+list of all available packages
 ```bash
 yum list available
 ```
 
-список всех установленных пакетов
-
+list of all installed packages
 ```bash
 yum list installed
 ```
 
-установлен ли указанный пакет
-
+is the specified package installed
 ```bash
 yum list installed httpd
 ```
 
-список установленных и доступных пакетов
-
+list of installed and available packages
 ```bash
 yum list all
 ```
 
-список пакетов, относящихся к ядру
-
+list of packages related to the kernel
 ```bash
 yum list kernel
 ```
 
-отображение информации о пакете
-
+display information about the package
 ```bash
 yum info httpd
 ```
 
-список зависимостей и необходимых пакетов
-
+list of dependencies and required packages
 ```bash
 yum deplist httpd
 ```
 
-найти пакет, который содержит файл
-
+find the package that contains the file
 ```bash
 yum provides '*bin/top'
 ```
 
-поиск пакета по имени и описанию
-
+search for a package by name and description
 ```bash
 yum search httpd
-```
-
-```bash
 yum search yum
 ```
 
-получить информацию о доступных обновлениях безопасности
-
+get information about available security updates
 ```bash
 yum updateinfo list security
 ```
 
-вывести список групп
-
+display a list of groups
 ```bash
 yum grouplist
 ```
 
-вывести описание и содержимое группы
-
+display the description and contents of the group
 ```bash
 yum groupinfo 'Basic Web Server'
 ```
 
-установка группы пакетов «Basic Web Server»
-
+installing the "Basic Web Server" package group
 ```bash
 yum groupinstall 'Basic Web Server'
 ```
 
-удаление группы
-
+deleting a group
 ```bash
 yum groupremove 'Basic Web Server'
 ```
 
-Проверка на доступные обновления
-
+Check for available updates
 ```bash
 yum check-update
 ```
 
-список подключенных репозиториев
-
+list of connected repositories
 ```bash
 yum repolist
 ```
 
-информация об определенном репозиторий
-
+information about a specific repository
 ```bash
 yum repoinfo epel
 ```
 
-информация о пакетах в указанном репозитории
-
+information about packages in the specified repository
 ```bash
 yum repo-pkgs epel list
 ```
 
-установить все пакеты из репозитория
-
+install all packages from the repository
 ```bash
 yum repo-pkgs reponame install
 ```
 
-удалить пакеты установленные из репозитория
-
+remove packages installed from the repository
 ```bash
 yum repo-pkgs reponame remove
 ```
 
-создать кэш
-
+create cache
 ```bash
 yum makecache
 ```
 
-проверить локальную базу rpm (поддерживаются параметры dependencies, duplicates, obsoletes, provides)
-
+check local rpm database (dependencies, duplicates, obsoletes, provides options are supported)
 ```bash
 yum check
-```
-
-```bash
 yum check dependencies
 ```
 
-просмотр yum истории (вывод списка транзакций)
-
+viewing yum history (listing transactions)
 ```bash
 yum history list
 ```
 
-просмотр информации определенной транзакции (установленные пакеты, установленные зависимости)
-
+view information about a specific transaction (installed packages, installed dependencies)
 ```bash
 yum history info 9
 ```
 
-отмена транзакции
-
+transaction cancellation
 ```bash
 yum history undo 9
 ```
 
-повторить
-
+repeat
 ```bash
 yum history redo 9
 ```
 
-дополнительно можно просмотреть лог
-
+Additionally, you can view the log
 ```bash
 cat /var/log/yum.log
 ```
 
-удалить пакеты сохраненные в кэше
-
+remove cached packages
 ```bash
 yum clean packages
 ```
 
-удалить все пакеты и метаданные
-
+remove all packages and metadata
 ```bash
 yum clean all
 ```
 
-установить пакет
-
+install package
 ```bash
 yum install httpd
 ```
 
-удаление пакета
-
+package removal
 ```bash
 yum remove httpd
 ```
 
-обновить пакет
-
+update package
 ```bash
 yum update httpd
 ```
 
-обновить все пакеты
-
+update all packages
 ```bash
 yum update
 ```
 
-обновить до определенной версии
-
+upgrade to a specific version
 ```bash
 yum update-to
 ```
 
-обновить из локальной директории
-
+update from local directory
 ```bash
 yum localinstall httpd.rpm
 ```
 
-установить с http
-
+install from http
 ```bash
 yum localinstall http://server/repo/httpd.rpm
 ```
 
-откатиться к предыдущей версии пакета
-
+rollback to a previous package version
 ```bash
 yum downgrade
 ```
 
-переустановка пакета (восстановление удаленных файлов)
-
+reinstall the package (recovering deleted files)
 ```bash
 yum reinstall httpd
 ```
 
-удаление ненужных более пакетов
-
+remove unnecessary packages
 ```bash
 yum autoremove
 ```
 
-создание локальных репозиториев (createrepo ставится отдельно)
-
+create local repositories (createrepo is installed separately)
 ```bash
 createrepo
 ```
 
-установка обновлений по расписанию (yum-cron устанавливается отдельно)
-
+install scheduled updates (yum-cron is installed separately)
 ```bash
-yum-cron
+yum cron
 ```
 
 <center>
@@ -302,9 +251,9 @@ yum-cron
 
 <a name="options"></a>
 
-## Опции Yum
+## Yum Options
 
-ответить «yes» при запросе,
+answer "yes" when prompted,
 
 `-y`
 
@@ -312,40 +261,31 @@ yum-cron
 yum update -y
 ```
 
-ответить «no» при запросе
-
+answer "no" when prompted
 `--assumeno`
 
-использовать Yum без плагинов
-
+use Yum without plugins
 `--noplugins`
 
-или отключить определенный плагин
-
+or disable a specific plugin
 `--disableplugin=fastestmirror`
 
-включить плагины, которые установлены, но отключены
-
+enable plugins that are installed but disabled
 ```bash
 yum -enableplugin=ps
 ```
 
-включить отключенный репозиторий
-
+enable disabled repository
 ```bash
 yum update -y -enablerepo=epel
 ```
 
-отключить репозиторий
-
+disable repository
 ```bash
 yum update -y -disablerepo=epel
 ```
 
-скачать пакеты, но не устанавливать
-
-(на Centos 7 x86_64 будут скачаны в '/var/cache/yum/x86_64/7/base/packages/')
-
+download packages but don't install (on Centos 7 x86_64 will be downloaded to '/var/cache/yum/x86_64/7/base/packages/')
 ```bash
 yum install httpd -downloadonly
 ```
@@ -358,75 +298,62 @@ yum install httpd -downloadonly
 
 <a name="yum-utils"></a>
 
-## Cледующие команды доступны после установки пакета yum-utils
+## The following commands are available after installing the yum-utils package
 
-найти из какого репозитория установлен пакет
-
+find which repository a package is installed from
 ```bash
 find-repos-of-install httpd
 ```
 
-найти процессы, пакеты которых обновлены и требуют рестарта
-
+find processes whose packages are up to date and need to be restarted
 ```bash
 need-restarting
 ```
 
-запрос к репозиторию, узнать зависимости пакета, не устанавливая его
-
+request to repository, find out package dependencies without installing it
 ```bash
 repoquery -requires -resolve httpd
 ```
 
-синхронизировать yum репозиторий updates в локальную деректорию repo1
-
+sync yum updates repository to local repo1 directory
 ```bash
 reposync -p repo1 -repoid=updates
 ```
 
-проверить локальный репозиторий на целостность
-
+check local repository for integrity
 ```bash
 verifytree URL
 ```
 
-завершить транзакции
-
+complete transactions
 ```bash
 yum-complete-transaction
 ```
 
-установить необходимые зависимости для сборки RPM пакета
-
+install the necessary dependencies to build the RPM package
 ```bash
 yum-builddep
 ```
 
-управление конфигурационными опциями и репозиториями yum
-
+manage configuration options and yum repositories
 ```bash
 yum-config-manager
 ```
 
-запрос к локальной базе yum, отображение информации о пакете
-
-(использованная команда, контрольная сумма, URL с которого был установлен и другое)
-
+request to local yum database, display information about the package (command used, checksum, URL from which it was set, etc.)
 ```bash
 yumdb info httpd
 ```
 
-скачать rpm пакеты из репозитория
-
+download rpm packages from repository
 ```bash
-yumdownloader
+yum downloader
 ```
 
-скачать src.rpm пакет из репозитория
-
-(должен быть подключен соответствующий репозиторий, например в '/etc/yum.repos.d/CentOS-Sources.repo' в CentOS)
-
-`yumdownloader --source php`
+download src.rpm package from repository (the corresponding repository must be included, for example in '/etc/yum.repos.d/CentOS-Sources.repo' in CentOS)
+```bash
+yumdownloader --source php
+```
 
 <center>
   <div id="gads">
@@ -436,51 +363,34 @@ yumdownloader
 
 <a name="conf"></a>
 
-## Конфигурационные файлы Yum и их расположение
+## Yum configuration files and their location
+* Main config file `/etc/yum.conf`
+* directory, with configurations (for example, yum plugins) `/etc/yum/`
+* directory containing information about repositories `/etc/yum.conf.d/`
 
-Основной конфигурационный файл
+#### Some yum.conf options:
 
-`/etc/yum.conf`
-
-директория, с конфигурациями (например, yum плагины)
-
-`/etc/yum/`
-
-директория, содержащая информацию о репозиториях
-
-`/etc/yum.conf.d/`
-
-#### Некоторые опции yum.conf:
-
-Директория, где yum хранит кэш и файлы базы (по умолчанию '/var/cache/yum')
-
+Directory where yum stores cache and database files (default `/var/cache/yum`)
 ```bash
 cachedir=/var/cache/yum/$basearch/$releasever
 ```
 
-
-Определяет должен или нет Yum хранить кэш заголовков и пакетов после успешной установки. Значения: 0 или 1. (по умолчанию 1)
-
+Specifies whether or not Yum should keep a cache of headers and packages after a successful installation. Values: 0 or 1. (default 1)
 `keepcache=1`
 
-уровень вывода отладочных сообщений. Значения: 1-10 (по умолчанию 2)
-
+debug output level. Values: 1-10 (default 2)
 `debuglevel=2`
 
-лог файл (по умолчанию '/var/log/yum.log')
-
+log file (default '/var/log/yum.log')
 `logfile=/var/log/yum.log`
 
-обновлять устаревшие пакеты
-
+update obsolete packages
 `obsoletes=1`
 
-проверка подписи пакетов. Значения: 0 или 1 (по умолчанию 1)
-
+package signature verification. Values: 0 or 1 (default 1)
 `gpgcheck=1`
 
-включение плагинов. Значения: 0 или 1 (по умолчанию 1)
-
+enabling plugins. Values: 0 or 1 (default 1)
 `plugins=1`
 
 <center>
@@ -491,34 +401,28 @@ cachedir=/var/cache/yum/$basearch/$releasever
 
 <a name="plugins"></a>
 
-## Некоторые полезные плагины
-
-Добавляет опцию командной строки для просмотра ченжлога перед/после обновлениями
-
+## Some useful plugins
+Adds command line option to view changelog before/after updates
 ```bash
 yum-plugin-changelog
 ```
 
-выбирает более быстрые репозитории из списка зеркал
-
+selects faster repositories from a list of mirrors
 ```bash
 yum-plugin-fastestmirror
 ```
 
-добавляет команды keys, keys-info, keys-data, keys-remove, которые позволяют работать с ключами.
-
+adds keys, keys-info, keys-data, keys-remove commands that allow you to work with keys.
 ```bash
 yum-plugin-keys
 ```
 
-блокировать указанные пакеты от обновления, команда yum versionlock
-
+block specified packages from updating, yum versionlock command
 ```bash
 yum-plugin-versionlock
 ```
 
-добаление команд yum verify-all, verify-multilib, verify-rpm для проверки контрольных сумм пакетов
-
+adding yum verify-all, verify-multilib, verify-rpm commands to verify package checksums
 ```bash
 yum-plugin-verify
 ```
@@ -531,31 +435,27 @@ yum-plugin-verify
 
 <a name="proxy"></a>
 
-## Работа Yum через прокси сервер
+## Work Yum through a proxy server
+For all users:
 
-Для всех пользователей:
-
-добавить в секцию [main] в /etc/yum.conf
-
+add to the `[main]` section in `/etc/yum.conf`
 ```bash
 proxy='http://server:3128'
 ```
 
-при необходимости указать пароль, добавить
+if necessary, specify a password, add
 ```bash
 proxy_proxy_username=user
 proxy_password=pass
 ```
 
-указать прокси для отдельного пользователя
+specify proxy for individual user
 ```bash
 export http_proxy='http://server:3128'
 ```
 
-Дополнительно читайте:
+Read more:
 ```bash
 man yum
 man rpm
 ```
-
-<a href="http://habrahabr.ru/sandbox/95851/" target="_blank">Оригинал</a>
